[package]
name = "brick"
version = "0.1.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
repository = "https://github.com/udzura/brick"
keywords = ["workflow", "http-api"]
license-file = "LICENSE"
readme = "README.md"
description = "Remote/async code executor for sandbox environment"
edition = "2018"

[dependencies]
crossbeam = "0.8.0"
rand = "0.8.3"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
